--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
 	"routes": [
-    { "src": "/manage-landing-page", "dest": "/manage-landing-page/index.html" },
-    { "src": "/testimonials-grid-section", "dest": "/testimonials-grid-section/index.html" }
+    { "src": "/manage-landing-page", "dest": "/manage-landing-page/" },
+    { "src": "/testimonials-grid-section", "dest": "/testimonials-grid-section/" }
   ]
 }
