--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,7 @@
     { "src": "/manage-landing-page", "dest": "/manage-landing-page/index.html" },
     { "src": "/testimonials-grid-section", "dest": "/testimonials-grid-section/index.html" },
     { "src": "/easybank-landing-page", "dest": "/easybank-landing-page/index.html" },
-    { "src": "/social-proof-section", "dest": "/social-proof-section/index.html" }
+    { "src": "/social-proof-section", "dest": "/social-proof-section/index.html" },
+    { "src": "/huddle-landing-page", "dest": "/huddle-landing-page/index.html" }
   ]
 }
